# huge

./: .Rbuildignore  .gitignore  CLAUDE.md  CMakeLists.txt  DESCRIPTION  README.md  cran-comments.md
.github/workflows/: python-package-docs.yml  python-package-release.yml  python-package-tests.yml  python-package-v03-docs.yml  python-package-v03-release.yml  python-package-v03-tests.yml  python-pypi-smoke.yml  python-wrapper-tests.yml  r-cmd-check.yml
R/: huge-package.R  huge.R  huge.ct.R  huge.generator.R  huge.glasso.R  huge.mb.R  huge.plot.R  huge.select.R  huge.tiger.R
benchmark/: active_set_baseline.R  active_set_case.R  active_set_gate_check.R  bench_1.4_vs_1.3.5.R  bench_compare.R  bench_pyhuge_detail.py  bench_pyhuge_report.py  bench_pyhuge_worker.py  bench_report.R  bench_vs_cran.R  bench_worker.R
benchmark/active_set_baseline/: GATES.md  README.md
python-package/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  mkdocs.yml  parity_report.json  pyproject.toml  setup.py
python-package-v0.3/: CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  setup.py
python-package-v0.3/.mplconfig/: fontlist-v390.json
python-package-v0.3/cpp/: native_core.cpp
python-package-v0.3/docs/: api.md  changelog.md  contributing.md  getting-started.md  index.md  installation.md  performance.md  release.md  troubleshooting.md  tutorials.md
python-package-v0.3/docs/man/: huge.md  huge_ct.md  huge_generator.md  huge_glasso.md  huge_inference.md  huge_mb.md  huge_plot_graph_matrix.md  huge_plot_network.md  huge_select.md  huge_stockdata.md  index.md  test.md
python-package-v0.3/examples/: run_huge_mb.py  run_native_demo.py  run_sim_inference_roc.py
python-package-v0.3/pyhuge/: __init__.py
python-package-v0.3/scripts/: build_docs.sh  bump_version.py  r_parity_report.py
python-package-v0.3/tests/: test_core_unit.py  test_e2e_optional.py  test_native_smoke.py  test_native_vs_r_parity.py  test_public_api.py
python-package/.mplconfig/: fontlist-v390.json
python-package/cpp/: huge_core.cpp  native_core_bindings.cpp
python-package/docs/: api.md  beginner-workflow.md  changelog.md  citation.md  contributing.md  design.md  faq.md  getting-started.md  index.md  installation.md  performance.md  quickstart.md  release.md  troubleshooting.md  tutorials.md
python-package/docs/man/: doctor.md  huge.md  huge_generator.md  huge_inference.md  huge_npn.md  huge_plot.md  huge_plot_roc.md  huge_plot_sparsity.md  huge_roc.md  huge_select.md  huge_select_summary.md  huge_stockdata.md  huge_summary.md  huge_tiger.md  index.md  test.md
python-package/examples/: run_huge_glasso.py  run_method_wrappers.py  run_network_plot.py  run_summary_and_plot.py
python-package/pyhuge/: __init__.py  core.py  doctor.py  parity.py
python-package/pyhuge/data/: stockdata.npz
python-package/scripts/: build_dist.sh  bump_version.py  r_parity_report.py  release.sh
python-package/tests/: conftest.py  test_core_unit.py  test_doctor.py  test_e2e_optional.py  test_native_smoke.py  test_native_vs_r_parity.py  test_public_api.py  test_rd_examples_parity.py  test_runtime_errors.py
src/: Makevars  Makevars.in  Makevars.win  SPMBgraphsqrt.cpp
vignettes/: huge.Rnw
