[build-system]
requires = ["setuptools>=68", "wheel", "pybind11>=2.11", "numpy>=1.23"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhuge"
version = "0.3.1"
description = "Native Python package for high-dimensional undirected graph estimation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-2.0-only" }
authors = [
  { name = "Tuo Zhao", email = "tourzhao@gatech.edu" }
]
keywords = ["graphical-model", "graphical-lasso", "sparse", "statistics", "native-python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
runtime = [
  "scikit-learn>=1.3",
]
viz = [
  "matplotlib>=3.8",
  "networkx>=3.2",
]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
]
test = [
  "pytest>=7.4",
]
dev = [
  "pytest>=7.4",
  "matplotlib>=3.8",
  "networkx>=3.2",
  "build>=1.2",
  "twine>=5.1",
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
]
release = [
  "build>=1.2",
  "twine>=5.1",
]

[project.scripts]
pyhuge-doctor = "pyhuge.doctor:main"

[project.urls]
Homepage = "https://github.com/Gatech-Flash/huge"
Repository = "https://github.com/Gatech-Flash/huge"
Documentation = "https://gatech-flash.github.io/huge/"
Issues = "https://github.com/Gatech-Flash/huge/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pyhuge*"]

[tool.setuptools.package-data]
pyhuge = ["data/*.npz"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-q"
